--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <h1>The button Element</h1>
 
-<a href="https://stg-www.sandbox.paypay.ne.jp/app/apple/web/link?flow=bind" target="blank" class="button">Go To Universal Link</a>
+<a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind"> Universal Link </a>
+
  
 </body>
 </html>
+
+
