--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 
 <h1>The button Element</h1>
 
-<a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind"> Universal Link </a>
+ <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind"> Universal Link </a>
+ <br>
+ <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?code=https%3A%2F%2Fqr-stg.sandbox.paypay.ne.jp%2F28180112561af486-e90b-4e15-8f30-5fa7d21ee68f">Old Link</a>
+ <br>
+ <a href="https://apps.apple.com/account/billing">Apple Link</a>
+ <br>
+ <a href="paypay://home">paypay://home</a>
+ <br>
+ <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind">Click from webView</a>
 
- 
 </body>
 </html>
 
