--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style type="text/css">
+    .center {
+      border: 5px solid;
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+    }
+    </style>
+</head>
 <body>
 
-<h1>The button Element</h1>
+<div class="center">
+ <h1>The button Element</h1>
 
  <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind"> Universal Link </a>
  <br>
@@ -13,7 +24,7 @@
  <a href="paypay://home">paypay://home</a>
  <br>
  <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind">Click from webView</a>
-
+</div>
 </body>
 </html>
 
