--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
 
 <div class="center">
+ <a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple </a>
+ <br>
+ <a href="https://www.paypay.ne.jp/app/amazonjp/web/link""> Prod Universal Link Amazon Connect (OLD) </a>
+ <br>
  <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind"> Universal Link </a>
  <br>
  <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?code=https%3A%2F%2Fqr-stg.sandbox.paypay.ne.jp%2F28180112561af486-e90b-4e15-8f30-5fa7d21ee68f">Old Link</a>
