--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <div class="center">
  <a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple </a>
  <br>
+<a href="https://dev.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple With Dev Domain</a>
+ <br>
 <a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind&_ga=2.83059286.1765963944.1696502549-1232967109.1671283475"> Prod Universal Link Apple With GA TAG</a>
  <br>
  <a href="https://www.paypay.ne.jp/app/amazonjp/web/link""> Prod Universal Link Amazon Connect (OLD) </a>
