Update index.html with base URL universal link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
 <div class="center">
- <a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple </a>
+<a href="https://stg-www.paypay-corp.co.jp/"> Base URL Universal Link </a>
+ <br>
+<a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple </a>
  <br>
 <a href="https://dev.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple With Dev Domain</a>
  <br>
