--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 <div class="center">
 <a href="https://stg-www.paypay-corp.co.jp/"> Base URL Universal Link </a>
  <br>
+<a href="https://paypay.ne.jp/card-gold"> Gold Card Without Query Param </a>
+ <br>
+<a href="https://paypay.ne.jp/card-gold?appwebview"> Gold Card With Query Param </a>
+ <br>
+<a href="https://paypay.ne.jp/guide/point-save/"> Point Save Without Query Param </a>
+ <br>
+<a href="https://paypay.ne.jp/guide/point-save?appwebview"> Point Save With Query Param </a>
+ <br>
+ <br>
+<p>**************************</p>
+<p>**************************</p>
+<br>
 <a href="https://www.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple </a>
  <br>
 <a href="https://dev.paypay.ne.jp/app/apple/web/connect?flow=bind"> Prod Universal Link Apple With Dev Domain</a>
