--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <div class="center">
 <a href="https://stg-www.paypay-corp.co.jp/"> Base URL Universal Link </a>
  <br>
-<a href="https://paypay.ne.jp/card-gold"> Gold Card Without Query Param </a>
+<a href="https://stg-www.paypay-corp.co.jp/card-gold"> Gold Card Without Query Param </a>
  <br>
-<a href="https://paypay.ne.jp/card-gold?appwebview"> Gold Card With Query Param </a>
+<a href="https://stg-www.paypay-corp.co.jp/card-gold?appwebview"> Gold Card With Query Param </a>
  <br>
-<a href="https://paypay.ne.jp/guide/point-save/"> Point Save Without Query Param </a>
+<a href="https://stg-www.paypay-corp.co.jp/guide/point-save/"> Point Save Without Query Param </a>
  <br>
-<a href="https://paypay.ne.jp/guide/point-save?appwebview"> Point Save With Query Param </a>
+<a href="https://stg-www.paypay-corp.co.jp/guide/point-save?appwebview"> Point Save With Query Param </a>
  <br>
  <br>
 <p>**************************</p>
