--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <br>
 <a href="https://stg-www.paypay-corp.co.jp/card-gold?appwebview"> Gold Card With Query Param </a>
  <br>
-<a href="https://stg-www.paypay-corp.co.jp/guide/point-save/"> Point Save Without Query Param </a>
+<a href="https://stg-www.paypay-corp.co.jp/guide/point-save"> Point Save Without Query Param </a>
  <br>
 <a href="https://stg-www.paypay-corp.co.jp/guide/point-save?appwebview"> Point Save With Query Param </a>
  <br>
