--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
  <a href="paypay://home">paypay://home</a>
  <br>
  <a href="https://stg-www.paypay-corp.co.jp/app/apple/web/link?flow=bind">Click from webView</a>
+ <br>
+<a href="paypay://home?showP2PBalloon=true">Click Deeplink for Home P2P Balloon</a>
 </div>
 </body>
 </html>
